--- a/src/App.css
+++ b/src/App.css
@@ -15,17 +15,24 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #e2ebfd;
+}
+
+.App-body {
+  background-color: #e2ebfd;
+  min-height: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  color: #282c34;
+  margin: 0% 10% 0% 10%;
 }
 
 @keyframes App-logo-spin {
